gitops/infra/dns/adguard/svc-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-web
  namespace: dns
spec:
  type: ClusterIP
  selector:
    app: adguard
  ports:
    - name: web
      port: 80
      targetPort: 80
      protocol: TCP
