gitops/infra/dns/adguard/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: dns
spec:
  type: LoadBalancer
  selector:
    app: adguard
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
